// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Head defaults to an empty string if both headline and shortHeadline are null 1`] = `
Array [
  "",
  " | ",
  "Comment | ",
  "The Times",
]
`;

exports[`Head outputs array of author in context schema 1`] = `
<Helmet
  encodeSpecialCharacters={false}
>
  <title>
    Some Headline
     | 
    Comment | 
    The Times
  </title>
  <meta
    content="Some Headline"
    name="article:title"
  />
  <meta
    content="The Times"
    name="article:publication"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    name="description"
  />
  <meta
    content="Oliver Wright, Policy Editor | Tom Knowles, Technology Correspondent"
    name="author"
  />
  <meta
    content="Some Headline"
    property="og:title"
  />
  <meta
    content="article"
    property="og:type"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    property="og:url"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    property="og:description"
  />
  <meta
    content="https://crop169.io?resize=685"
    property="og:image"
  />
  <meta
    content="Some Headline"
    name="twitter:title"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    name="twitter:url"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    name="twitter:description"
  />
  <meta
    content="https://crop169.io?resize=685"
    name="twitter:image"
  />
  <script
    type="application/ld+json"
  >
    {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject","url":"https://www.thetimes.co.uk/d/img/dual-masthead-placeholder-16x9-6a9822c61a.png"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".class-name"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":[{"@type":"Person","name":"Richard Lloyd Parry","jobTitle":"Asia Editor","url":"https://thetimes.co.uk/profile/richard-lloyd-parry","sameAs":"https://twitter.com/dicklp"},{"@type":"Person","name":"Richard Lloyd Parry","jobTitle":"Asia Editor","url":"https://thetimes.co.uk/profile/richard-lloyd-parry","sameAs":"https://twitter.com/dicklp"}]}
  </script>
</Helmet>
`;

exports[`Head outputs correct metadata 1`] = `
<Helmet
  encodeSpecialCharacters={false}
>
  <title>
    Some Headline
     | 
    Comment | 
    The Times
  </title>
  <meta
    content="Some Headline"
    name="article:title"
  />
  <meta
    content="The Times"
    name="article:publication"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    name="description"
  />
  <meta
    content="Richard Lloyd Parry, Tokyo"
    name="author"
  />
  <meta
    content="Some Headline"
    property="og:title"
  />
  <meta
    content="article"
    property="og:type"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    property="og:url"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    property="og:description"
  />
  <meta
    content="https://crop169.io?resize=685"
    property="og:image"
  />
  <meta
    content="Some Headline"
    name="twitter:title"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    name="twitter:url"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    name="twitter:description"
  />
  <meta
    content="https://crop169.io?resize=685"
    name="twitter:image"
  />
  <script
    type="application/ld+json"
  >
    {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject","url":"https://www.thetimes.co.uk/d/img/dual-masthead-placeholder-16x9-6a9822c61a.png"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".class-name"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":[{"@type":"Person","name":"Richard Lloyd Parry","jobTitle":"Asia Editor","url":"https://thetimes.co.uk/profile/richard-lloyd-parry","sameAs":"https://twitter.com/dicklp"}]}
  </script>
</Helmet>
`;

exports[`Head outputs correct metadata for a video article 1`] = `
<Helmet
  encodeSpecialCharacters={false}
>
  <title>
    Some Headline
     | 
    Comment | 
    The Times
  </title>
  <meta
    content="Some Headline"
    name="article:title"
  />
  <meta
    content="The Times"
    name="article:publication"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    name="description"
  />
  <meta
    content="Richard Lloyd Parry, Tokyo"
    name="author"
  />
  <meta
    content="Some Headline"
    property="og:title"
  />
  <meta
    content="article"
    property="og:type"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    property="og:url"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    property="og:description"
  />
  <meta
    content="https://video169.io?resize=685"
    property="og:image"
  />
  <meta
    content="Some Headline"
    name="twitter:title"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    name="twitter:url"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    name="twitter:description"
  />
  <meta
    content="https://video169.io?resize=685"
    name="twitter:image"
  />
  <script
    type="application/ld+json"
  >
    {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject","url":"https://www.thetimes.co.uk/d/img/dual-masthead-placeholder-16x9-6a9822c61a.png"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".class-name"},"image":{"@type":"ImageObject","url":"https://video169.io?resize=685","caption":"This is video caption"},"thumbnailUrl":"https://video169.io","dateModified":"2015-03-13T18:54:58.000Z","author":[{"@type":"Person","name":"Richard Lloyd Parry","jobTitle":"Asia Editor","url":"https://thetimes.co.uk/profile/richard-lloyd-parry","sameAs":"https://twitter.com/dicklp"}]}
  </script>
  <script
    type="application/ld+json"
  >
    {"@context":"https://schema.org/","@type":"VideoObject","name":"Some Headline","uploadDate":"2015-03-13T18:54:58.000Z","thumbnailUrl":"https://video169.io","description":"Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4","contentUrl":"https://url.io"}
  </script>
</Helmet>
`;

exports[`Head outputs correct metadata for seoDescription 1`] = `
<Helmet
  encodeSpecialCharacters={false}
>
  <title>
    Some Headline
     | 
    Comment | 
    The Times
  </title>
  <meta
    content="Some Headline"
    name="article:title"
  />
  <meta
    content="The Times"
    name="article:publication"
  />
  <meta
    content="sample seoDescription"
    name="description"
  />
  <meta
    content="Richard Lloyd Parry, Tokyo"
    name="author"
  />
  <meta
    content="Some Headline"
    property="og:title"
  />
  <meta
    content="article"
    property="og:type"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    property="og:url"
  />
  <meta
    content="sample seoDescription"
    property="og:description"
  />
  <meta
    content="https://crop169.io?resize=685"
    property="og:image"
  />
  <meta
    content="Some Headline"
    name="twitter:title"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    name="twitter:url"
  />
  <meta
    content="sample seoDescription"
    name="twitter:description"
  />
  <meta
    content="https://crop169.io?resize=685"
    name="twitter:image"
  />
  <script
    type="application/ld+json"
  >
    {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject","url":"https://www.thetimes.co.uk/d/img/dual-masthead-placeholder-16x9-6a9822c61a.png"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".class-name"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":[{"@type":"Person","name":"Richard Lloyd Parry","jobTitle":"Asia Editor","url":"https://thetimes.co.uk/profile/richard-lloyd-parry","sameAs":"https://twitter.com/dicklp"}]}
  </script>
</Helmet>
`;

exports[`Head outputs video schema for a video article 1`] = `
<Helmet
  encodeSpecialCharacters={false}
>
  <title>
    Some Headline
     | 
    Comment | 
    The Times
  </title>
  <meta
    content="Some Headline"
    name="article:title"
  />
  <meta
    content="The Times"
    name="article:publication"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    name="description"
  />
  <meta
    content="Richard Lloyd Parry, Tokyo"
    name="author"
  />
  <meta
    content="Some Headline"
    property="og:title"
  />
  <meta
    content="article"
    property="og:type"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    property="og:url"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    property="og:description"
  />
  <meta
    content="https://video169.io?resize=685"
    property="og:image"
  />
  <meta
    content="Some Headline"
    name="twitter:title"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    name="twitter:url"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    name="twitter:description"
  />
  <meta
    content="https://video169.io?resize=685"
    name="twitter:image"
  />
  <script
    type="application/ld+json"
  >
    {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject","url":"https://www.thetimes.co.uk/d/img/dual-masthead-placeholder-16x9-6a9822c61a.png"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".class-name"},"image":{"@type":"ImageObject","url":"https://video169.io?resize=685","caption":"This is video caption"},"thumbnailUrl":"https://video169.io","dateModified":"2015-03-13T18:54:58.000Z","author":[{"@type":"Person","name":"Richard Lloyd Parry","jobTitle":"Asia Editor","url":"https://thetimes.co.uk/profile/richard-lloyd-parry","sameAs":"https://twitter.com/dicklp"}]}
  </script>
  <script
    type="application/ld+json"
  >
    {"@context":"https://schema.org/","@type":"VideoObject","name":"Some Headline","uploadDate":"2015-03-13T18:54:58.000Z","thumbnailUrl":"https://video169.io","description":"Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4","contentUrl":"https://url.io"}
  </script>
</Helmet>
`;

exports[`Head removes author from context schema if there is empty array of bylines or null bylines 1`] = `
<Helmet
  encodeSpecialCharacters={false}
>
  <title>
    Some Headline
     | 
    Comment | 
    The Times
  </title>
  <meta
    content="Some Headline"
    name="article:title"
  />
  <meta
    content="The Times"
    name="article:publication"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    name="description"
  />
  
  <meta
    content="Some Headline"
    property="og:title"
  />
  <meta
    content="article"
    property="og:type"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    property="og:url"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    property="og:description"
  />
  <meta
    content="https://crop169.io?resize=685"
    property="og:image"
  />
  <meta
    content="Some Headline"
    name="twitter:title"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    name="twitter:url"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    name="twitter:description"
  />
  <meta
    content="https://crop169.io?resize=685"
    name="twitter:image"
  />
  <script
    type="application/ld+json"
  >
    {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject","url":"https://www.thetimes.co.uk/d/img/dual-masthead-placeholder-16x9-6a9822c61a.png"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".class-name"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
  </script>
</Helmet>
`;

exports[`Head removes author from context schema if there is empty array of bylines or null bylines 2`] = `
<Helmet
  encodeSpecialCharacters={false}
>
  <title>
    Some Headline
     | 
    Comment | 
    The Times
  </title>
  <meta
    content="Some Headline"
    name="article:title"
  />
  <meta
    content="The Times"
    name="article:publication"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    name="description"
  />
  <meta
    content="Some Headline"
    property="og:title"
  />
  <meta
    content="article"
    property="og:type"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    property="og:url"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    property="og:description"
  />
  <meta
    content="https://crop169.io?resize=685"
    property="og:image"
  />
  <meta
    content="Some Headline"
    name="twitter:title"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
    name="twitter:url"
  />
  <meta
    content="Boris Johnson’s sister an ex-BBC broadcaster and John Major’s health secretary will stand for Change UK in next month’s European elections.The pro-Remain party announced its MEP hopefuls from almost 4"
    name="twitter:description"
  />
  <meta
    content="https://crop169.io?resize=685"
    name="twitter:image"
  />
  <script
    type="application/ld+json"
  >
    {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject","url":"https://www.thetimes.co.uk/d/img/dual-masthead-placeholder-16x9-6a9822c61a.png"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".class-name"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
  </script>
</Helmet>
`;

exports[`Head removes section from title if there are no tiles 1`] = `
Array [
  "Some Headline",
  " | ",
  "",
  "The Times",
]
`;

exports[`Head removes section from title if there are no tiles with sections 1`] = `
Array [
  "Some Headline",
  " | ",
  "",
  "The Times",
]
`;

exports[`Head shows Sunday Times in title if publication is SUNDAYTIMES 1`] = `
Array [
  "Some Headline",
  " | ",
  "Comment | ",
  "The Sunday Times",
]
`;

exports[`Head shows Times in title if publication is TIMES 1`] = `
Array [
  "Some Headline",
  " | ",
  "Comment | ",
  "The Times",
]
`;

exports[`Head uses news in title if news is the only available section 1`] = `
Array [
  "Some Headline",
  " | ",
  "News | ",
  "The Times",
]
`;

exports[`Head uses news in title if news is the only available section 2`] = `
Array [
  "Some Headline",
  " | ",
  "News | ",
  "The Times",
]
`;

exports[`Head uses short headline if headline not available 1`] = `
Array [
  "short headline",
  " | ",
  "Comment | ",
  "The Times",
]
`;

exports[`Head uses the first non-news section in title 1`] = `
Array [
  "Some Headline",
  " | ",
  "Comment | ",
  "The Times",
]
`;
